fix #141 fix vertical alignment

--- a/style/adaptable.css
+++ b/style/adaptable.css
@@ -2416,6 +2416,7 @@ img.smallicon {
 .text-info,
 .highlight {
     color: [[setting:infoiconcolor]] !important;
+    margin-top: 9px; /* fix vertical alignment */
 }
 
 /* danger icon */
